# workshop_tum20_msgs

./: CMakeLists.txt  package.xml
srv/: SendAssemblyTask.srv
