<?xml version="1.0"?>
<package format="2">
  <name>workshop_tum_msgs</name>
  <version>0.0.0</version>
  <description>The workshop_tum_msgs package</description>

  <maintainer email="casas@arch.ethz.ch">Gonzalo Casas</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>industrial_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
  <build_export_depend>industrial_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>industrial_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
